# product-analytics-mcp-and-langgraph-project

./: .dockerignore  .gitignore  POC.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_pinecone.py  streamlit_app.py
Airflow/: Dockerfile  requirements.txt
Airflow/config/: book.json
Airflow/dags/: book_to_vector_pipeline.py  pineconetest.py
Airflow/dags/utils/: chunking.py  patching.py
Backend/: Dockerfile  api.py  chromadb_viewer.py  entrypoint.sh  fix_chromadb.py  fix_chromadb_schema.py  litellm_query_generator.py  logger.py  requirements.txt
Backend/parsing_methods/: doclingparsing.py  mistralparsing.py  mistralparsing_userpdf.py
agents/: Comparision_agent.py  forecast_code_agent.py  judge_agent.py  llmselection.py  rag_agent.py  research_agent.py  snowflake_utils.py  websearch_agent.py
langGraph/: pipeline.py  test_contextual_images.py
mcp/: server.py
